--- a/gb/25/2/5/n14430421.md
+++ b/gb/25/2/5/n14430421.md
@@ -23,39 +23,38 @@
 星回七彩辂，曾掩月无痕。</p>
 <p style="text-align: center;">责任编辑：林芳宇@</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/18/n14393658.md#1">五律：咏大丽花歌神韵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394336.md#1">五律：咏洋牡丹歌神韵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/19/n14394355.md#1">五律：咏风车茉莉歌神韵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/23/n14396300.md#1">五律：咏报春花歌神韵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399419.md#1">五律：咏盆景歌神韵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399420.md#1">五律：咏蓂荚歌神韵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399421.md#1">五律：咏樱花歌神韵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/31/n14402916.md#1">五律：咏法国歌神韵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/4/n14406122.md#1">五律：咏矢车菊歌神韵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14411493.md#1">五律：咏腊梅歌神韵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/13/n11519967.md#1" target="_blank">中秋佳节谢师恩 纽约华人的奇妙经历</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/25/n10590053.md#1" target="_blank">烧杀抢如何成为中共土地革命的“初心”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/11/n11105711.md#1" target="_blank">内蒙那达慕大会的无敌手 劫后遇佛缘</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/29/n10750586.md#1">张飞转世？岳家将牛皋怒喝退金兵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/24/n14317010.md#1">【古道人生】什么是真善？看他怎么待穷山民 善报不招自来！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14429072.md#1">【未解之谜】死于日军之手 杨氏兄妹做鬼38年再续前缘</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14426917.md#1">利用立春升阳气 打造一年好彩头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/30/n14425827.md#1">【古道人生】穷秀才愿意退婚 为何太守反判他成婚？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14432294.md#1">【唐青看时事】马斯克监管风暴 六奇兵震动美国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14432297.md#1">【未解之谜】超神奇轮回案例 双胞姐妹灵魂离体回前世</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431517.md#1">【菁英论坛】2025铁帽子王 贾庆林或张又侠？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431253.md#1">泰总理访北京 知情人揭一带一路电诈内幕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430617.md#1">研究称DeepSeek与中国移动有联系 引担忧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430729.md#1">女企业家除夕曝光讨债遭遇 质问谁在坑中国人</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14430010.md#1">投资10亿 红片《蛟龙行动》新年档票房大翻车</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429949.md#1">以为只是感冒 陆27岁男星因中枢神经感染猝逝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431615.md#1">大陆疯传汪小菲助大S后事 小S：无法容忍的谎言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430660.md#1">中国经济低迷 民众过年弃旅游改观影 引热议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430750.md#1">大S不办告别式 生前曾痛恨过一纪念日</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14431800.md#1">枕头发黄怎么办？ 专家推荐一物可迅速清理</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430355.md#1">为什么在室内晾衣服会影响健康？ 专家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431205.md#1">为何你会在凌晨3点醒来？ 如何继续入睡？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14429227.md#1">皮肤蜡黄 骨质疏松 都是糖化终产物惹的祸</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14429005.md#1">美国食品指南在乳制品和超加工食品存分歧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545549.md#1">【军事情报局】美对台军售大升级 或逾200亿美元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14545000.md#1">【新闻大家谈】八炯：亲历统战 台湾需守住防线</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/5/n14430421.htm">五律：歌神韵（三首）</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/5/n14430421.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
